# programmable-remote

./: .gitmodules  CMakeLists.txt  README.md  bluepill.cfg  dockerfile  rules.mk
case/: cherrymx.scad  remote.as  remote.scad
case/xcsg/: remote.stl  remote.xcsg
doc/: debounce.troff  design.org  states.puml  states_rx.puml  states_tx.puml
pcb/: fp-info-cache  fp-lib-table  programmable-remote-cache.lib  programmable-remote.kicad_pcb  programmable-remote.lib  programmable-remote.pro  programmable-remote.sch  sym-lib-table
pcb/programmable-remote.pretty/: Battery.kicad_mod  Crystal_ABLS-8.000MHZ-B4-T.kicad_mod  SW_2LP.kicad_mod  SW_PTS526.kicad_mod  TSOP953xx.kicad_mod
src/: Makefile  Makefile~  buttons.hpp  common.hpp  etl_profile.h  ir.hpp  nec.hpp  remote.cxx  remote.cxx~  statemachine.hpp  stm32f1_hal.hpp  util.hpp  util_libopencm3.hpp
test/: CMakeLists.txt  Makefile  test-main.cxx  test.cxx
