add_executable(test test.cxx)
target_include_directories(test PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../src")
target_include_directories(test PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../etl/include")
target_include_directories(test PRIVATE "${GOOGLETEST_DIR}/googlemock/include")
target_link_libraries(test gmock_main)
target_link_libraries(test gtest_main)
